--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
+
 <html>
 	<head>
 		<title>My Chrome Extension</title>
 		<link rel="stylesheet" href="styles.css" />
+		<meta charset="UTF-8" />
+
 	</head>
-	<body class="bg-gray-100 p-4">
+	<body class="min-w-md max-w-lg bg-gray-100 p-4">
 		<div
 			class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl"
 		>
 			<div class="md:flex">
 				<div class="p-8">
-					<h1 class="text-2xl font-bold text-gray-800 mb-4">
-						My Chrome Extension
+					<h1 class="text-2xl">
+						WB Downloader demo. 
 					</h1>
+					<p  class="text-base">
+						Откройте видео из отзыва и нажмите <b>[4]</b> для скачивания
+					</p>
 					<button
 						id="myButton"
 						class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
 					>
-						Click me
+						Ok
 					</button>
 				</div>
 			</div>
